add js file and pdf generator page

--- a/about.html
+++ b/about.html
@@ -165,26 +165,27 @@
       </div>
     </section>
 
-    <footer class="footer">
-      <div class="footer-right">
-        <img src="/resources/logo.webp" alt="logo" />
+    <footer>
+      <div class="footer container">
+        <div class="footer-right">
+          <img src="/resources/logo.webp" alt="logo" />
+        </div>
+        <div class="footer-center-left">
+          <p>Ubezpieczenia ZZ-Consulting</p>
+          <p>41-506 Chorzów</p>
+          <p>ul.Podmiejska 34/U1</p>
+        </div>
+        <div class="footer-center-right">
+          <p>Godziny otwarcia:</p>
+          <p>Pn: 9:00 - 19:00</p>
+          <p>Wt-Pt: 9:00 - 17:00</p>
+        </div>
       </div>
-      <div class="footer-center-left">
-        <p>Ubezpieczenia ZZ-Consulting</p>
-        <p>41-506 Chorzów</p>
-        <p>ul.Podmiejska 34/U1</p>
-      </div>
-      <div class="footer-center-right">
-        <p>Godziny otwarcia:</p>
-        <p>Pn: 9:00 - 19:00</p>
-        <p>Wt-Pt: 9:00 - 17:00</p>
-      </div>
-      <div class="footer-left">
-        <span>&copy; 2023</span>
-        <span>
-          <a href="#">ZZ-Consulting</a>. <br />Wszystkie prawa
-          zastrzeżone.</span
-        >
+      <div class="footer-last">
+      <div class="footer-copy container">
+        <span>&copy; 2023
+          <a href="/">ZZ-Consulting</a>.<br>Wszystkie prawa
+          zastrzeżone.</span>
         <p>
           Created by
           <a href="#"
@@ -192,6 +193,7 @@
           /></a>
         </p>
       </div>
+    </div>
     </footer>
     <i id="pageUp" class="fa-solid fa-circle-arrow-up"></i>
     <script src="/script.js"></script>
