--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <div class="header-container container">
         <div class="logo-container">
           <div class="logo">
-            <a href="#"
+            <a href="/"
               ><img src="/resources/logo.webp" alt="ZZ-Consulting Logo"
             /></a>
           </div>
@@ -100,7 +100,15 @@
         <li><a href="/about">O Nas</a></li>
         <li><a href="/forms">Druki</a></li>
         <li><a href="/partnerzy">Partnerzy</a></li>
-        <li><a href="/tools">Narzędzia</a></li>
+        <li><a href="/narzedzia">Narzędzia</a>
+          <ul>
+            <a href="#"><li class="on-hover-menu">Wypowiedzenie ubezpieczenia oc online</li></a>
+            <a href="#"><li class="on-hover-menu">Powiadomienie o zbyciu pojazdu</li></a>
+            <a href="#"><li class="on-hover-menu">Powiadomienie o wyrejestrowaniu pojazdu</li></a>
+            <a href="https://www.compero.pl/kalkulator_polis/p/MjAyMTg1LWM2YmE="><li class="on-hover-menu">Kalkulator oc online</li></a>
+            <a href="#"><li class="on-hover-menu">Kalkulator kary za brak oc</li></a>
+          </ul>
+        </li>
         <li><a href="/contact">Kontakt</a></li>
       </ul>
     </nav>
@@ -112,7 +120,7 @@
 
       <div class="choose-description container">
         <div class="left-site">
-          <img src="/resources/choose-us.jpg" alt="Choose-us" width="400px" />
+          <img src="/resources/choose-us.jpg" alt="Choose-us" width="330px">
         </div>
         <div class="right-site">
           <h2>Najlepsze ubezpieczenia w Chorzowie</h2>
@@ -336,8 +344,8 @@
           </div>
           <div class="car-right-site">
             <img
-              src="https://scontent.fktw4-1.fna.fbcdn.net/v/t39.30808-6/380593665_805521414913511_7053597363580076665_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=5f2048&_nc_ohc=YFXd5Px8JZIAX8A2c4a&_nc_ht=scontent.fktw4-1.fna&oh=00_AfBBo18ONvSAy-W0zLbzmJvYwnv8urX4iHniRQCISvhADg&oe=65571B70"
-              alt="calcualtor-photo"
+              src="/resources/calculator.jpg"
+              alt="calculator-photo"
             />
           </div>
         </div>
@@ -390,26 +398,27 @@
       </div>
     </section>
 
-    <footer class="footer">
-      <div class="footer-right">
-        <img src="/resources/logo.webp" alt="logo" />
+    <footer>
+      <div class="footer container">
+        <div class="footer-right">
+          <img src="/resources/logo.webp" alt="logo" />
+        </div>
+        <div class="footer-center-left">
+          <p>Ubezpieczenia ZZ-Consulting</p>
+          <p>41-506 Chorzów</p>
+          <p>ul.Podmiejska 34/U1</p>
+        </div>
+        <div class="footer-center-right">
+          <p>Godziny otwarcia:</p>
+          <p>Pn: 9:00 - 19:00</p>
+          <p>Wt-Pt: 9:00 - 17:00</p>
+        </div>
       </div>
-      <div class="footer-center-left">
-        <p>Ubezpieczenia ZZ-Consulting</p>
-        <p>41-506 Chorzów</p>
-        <p>ul.Podmiejska 34/U1</p>
-      </div>
-      <div class="footer-center-right">
-        <p>Godziny otwarcia:</p>
-        <p>Pn: 9:00 - 19:00</p>
-        <p>Wt-Pt: 9:00 - 17:00</p>
-      </div>
-      <div class="footer-left">
-        <span>&copy; 2023</span>
-        <span>
-          <a href="#">ZZ-Consulting</a>. <br />Wszystkie prawa
-          zastrzeżone.</span
-        >
+      <div class="footer-last">
+      <div class="footer-copy container">
+        <span>&copy; 2023
+          <a href="/">ZZ-Consulting</a>.<br>Wszystkie prawa
+          zastrzeżone.</span>
         <p>
           Created by
           <a href="#"
@@ -417,6 +426,7 @@
           /></a>
         </p>
       </div>
+    </div>
     </footer>
     <i id="pageUp" class="fa-solid fa-circle-arrow-up"></i>
 
