add tools sites/ clean code

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
       content="Agencja ubezpieczeniowa to miejsce, gdzie możesz uzyskać informacje i zakupić różnego rodzaju ubezpieczenia."
     />
     <title>ZZ-Consulting Strona Główna</title>
-    <link rel="preload" as="image" href="/resources/header.webp" />
     <link rel="stylesheet" href="css/style.css" />
     <link
       rel="stylesheet"
@@ -83,7 +82,7 @@
               <li><a class="menuItem" href="/about">O Nas</a></li>
               <li><a class="menuItem" href="/forms">Druki</a></li>
               <li><a class="menuItem" href="/partnerzy">Partnerzy</a></li>
-              <li><a class="menuItem" href="/tools">Narzędzia</a></li>
+              <li><a class="menuItem" href="/narzedzia">Narzędzia</a></li>
               <li><a class="menuItem" href="/contact">Kontakt</a></li>
             </ul>
             <div class="hamburger">
@@ -100,13 +99,28 @@
         <li><a href="/about">O Nas</a></li>
         <li><a href="/forms">Druki</a></li>
         <li><a href="/partnerzy">Partnerzy</a></li>
-        <li><a href="/narzedzia">Narzędzia</a>
+        <li>
+          <a href="/narzedzia">Narzędzia</a>
           <ul>
-            <a href="#"><li class="on-hover-menu">Wypowiedzenie ubezpieczenia oc online</li></a>
-            <a href="#"><li class="on-hover-menu">Powiadomienie o zbyciu pojazdu</li></a>
-            <a href="#"><li class="on-hover-menu">Powiadomienie o wyrejestrowaniu pojazdu</li></a>
-            <a href="https://www.compero.pl/kalkulator_polis/p/MjAyMTg1LWM2YmE="><li class="on-hover-menu">Kalkulator oc online</li></a>
-            <a href="#"><li class="on-hover-menu">Kalkulator kary za brak oc</li></a>
+            <a href="/narzedzia/wypowiedzenie-oc"
+              ><li class="on-hover-menu">
+                Wypowiedzenie ubezpieczenia oc online
+              </li></a
+            >
+            <a href="/narzedzia/powiadomienie-o-zbyciu"
+              ><li class="on-hover-menu">Powiadomienie o zbyciu pojazdu</li></a
+            >
+            <a href="/narzedzia/powiadomienie-o-wyrejestrowaniu"
+              ><li class="on-hover-menu">
+                Powiadomienie o wyrejestrowaniu pojazdu
+              </li></a
+            >
+            <a href="https://www.compero.pl/kalkulator_polis/p/MjAyMTg1LWM2YmE="
+              ><li class="on-hover-menu">Kalkulator oc online</li></a
+            >
+            <a href="/narzedzia/kalkulator-kary"
+              ><li class="on-hover-menu">Kalkulator kary za brak oc</li></a
+            >
           </ul>
         </li>
         <li><a href="/contact">Kontakt</a></li>
@@ -120,7 +134,7 @@
 
       <div class="choose-description container">
         <div class="left-site">
-          <img src="/resources/choose-us.jpg" alt="Choose-us" width="330px">
+          <img src="/resources/choose-us.jpg" alt="Choose-us" width="330px" />
         </div>
         <div class="right-site">
           <h2>Najlepsze ubezpieczenia w Chorzowie</h2>
@@ -270,9 +284,8 @@
                           przed nieprzewidzianymi zdarzeniami, ale także
                           gwarancja spokoju ducha. Bezpieczeństwo Twojego
                           miejsca mieszkania to dla nas priorytet, dlatego
-                          oferujemy rozwiązania, które dają Ci
-                          pewność, że jesteś
-                          odpowiednio zabezpieczony.
+                          oferujemy rozwiązania, które dają Ci pewność, że
+                          jesteś odpowiednio zabezpieczony.
                         </p>
                       </div>
                       <div><button class="button">Sprawdź więcej</button></div>
@@ -301,9 +314,9 @@
                           Nasze ubezpieczenia firmowe są dostosowane do
                           różnorodnych potrzeb przedsiębiorstw, oferując nie
                           tylko zabezpieczenie przed ryzykami, ale także
-                          wsparcie w trudnych sytuacjach. Z
-                          nami Twój biznes ma solidne oparcie, a Ty masz
-                          partnera gotowego chronić Twoje interesy.
+                          wsparcie w trudnych sytuacjach. Z nami Twój biznes ma
+                          solidne oparcie, a Ty masz partnera gotowego chronić
+                          Twoje interesy.
                         </p>
                       </div>
                       <div><button class="button">Sprawdź więcej</button></div>
@@ -343,10 +356,7 @@
             </a>
           </div>
           <div class="car-right-site">
-            <img
-              src="/resources/calculator.jpg"
-              alt="calculator-photo"
-            />
+            <img src="/resources/calculator.jpg" alt="calculator-photo" />
           </div>
         </div>
       </div>
@@ -413,20 +423,31 @@
           <p>Pn: 9:00 - 19:00</p>
           <p>Wt-Pt: 9:00 - 17:00</p>
         </div>
+        <div class="footer-nav">
+          <ul>
+            <li><a href="/">Strona główna</a></li>
+            <li><a href="/about">O nas</a></li>
+            <li><a href="/forms">Druki</a></li>
+            <li><a href="/partnerzy">Partnerzy</a></li>
+            <li><a href="/narzedzia">Narzędzia</a></li>
+            <li><a href="/contact">Kontakt</a></li>
+          </ul>
+        </div>
       </div>
       <div class="footer-last">
-      <div class="footer-copy container">
-        <span>&copy; 2023
-          <a href="/">ZZ-Consulting</a>.<br>Wszystkie prawa
-          zastrzeżone.</span>
-        <p>
-          Created by
-          <a href="#"
-            ><img src="/resources/AODesign.webp" alt="AODesign logotype"
-          /></a>
-        </p>
+        <div class="footer-copy container">
+          <span
+            >&copy; 2023 <a href="/">ZZ-Consulting</a>.<br />Wszystkie prawa
+            zastrzeżone.</span
+          >
+          <p>
+            Created by
+            <a href="#"
+              ><img src="/resources/AODesign.webp" alt="AODesign logotype"
+            /></a>
+          </p>
+        </div>
       </div>
-    </div>
     </footer>
     <i id="pageUp" class="fa-solid fa-circle-arrow-up"></i>
 
