--- a/tools/tools.html
+++ b/tools/tools.html
@@ -8,7 +8,6 @@
       content="Agencja ubezpieczeniowa to miejsce, gdzie możesz uzyskać informacje i zakupić różnego rodzaju ubezpieczenia."
     />
     <title>ZZ-Consulting Narzędzia</title>
-    <link rel="preload" as="image" imagesrcset="/resources/header.webp" />
     <link rel="stylesheet" href="/css/style.css" />
     <script
       src="https://kit.fontawesome.com/165dd52d1d.js"
@@ -113,7 +112,7 @@
       <h1>Narzędzia</h1>
       <div class="partner-container">
         <div class="partner-box container">
-          <div class="partner-left">
+          <div class="partner-left tools-left">
             <div class="partner-description-box">
               <div class="partner-description">
                 <h3>Instrukcja Wypełniania Formularzy Online</h3>
@@ -190,7 +189,7 @@
           <div class="partner-back">
             <a class="js-back"><i class="fa-solid fa-angles-left"></i></a>
           </div>
-          <div class="partner-right">
+          <div class="partner-right tools-right">
             <div class="tools-nav">
               <ul>
                 <li><h2>Dokumenty:</h2></li>
